# job_search

./: .gitignore  README.md  main.py  pyproject.toml  quaries.sql  site_search.py
src/: DBManager.py  WorkWithJSON.py  api.py  employer.py  vacancy.py
tests/: test_FileMan.py  test_FileManager.py  test_vacancy.py
